--- a/css/styles.css
+++ b/css/styles.css
@@ -449,11 +449,11 @@ header .container {
     opacity: 0;
     pointer-events: none;
     transition: opacity 250 ease-in-out;
-}
+} 
 .backdrop.is-open {
     opacity: 1;
     pointer-events: auto;
-}
+} 
 .modal {
     position: absolute;
     top: 50%;
@@ -509,10 +509,9 @@ header .container {
     letter-spacing: 0.04em;
     color: #8e8f99;
     display: inline-block;
-    padding-bottom: 4px;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 }
-.modal-input-box {
+.modal-wraper {
     position: relative;
 }
 .modal-input {
@@ -523,6 +522,7 @@ header .container {
     background-color: transparent;
     padding-left: 0;
     outline: transparent;
+    padding-left: 38px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:hover {
@@ -540,6 +540,12 @@ header .container {
     left: 16px;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input-box {
+    margin-bottom: 8px;
+}
+.modal-coment-box {
+    margin-bottom: 16px;
 }
 .modal-coment {
     width: 360px;
@@ -570,6 +576,9 @@ header .container {
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
+}
+.input-check-link {
+    color: #4D5AE5;
 }
 .check-empty {
     width: 16px;
