--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ header .container {
 .backdrop {
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250 ease-in-out;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .backdrop.is-open {
     opacity: 1;
@@ -465,6 +465,7 @@ header .container {
     background: #fcfcfc;
     border-radius: 4px;
     padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn {
     width: 24px;
@@ -480,12 +481,15 @@ header .container {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-icon {
     stroke: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,.modal-close-btn:focus {
     background-color:#404BBF;
+    border: none;
 }
 .modal-close-btn:hover .modal-close-icon {
     fill:  #fff;
@@ -505,17 +509,19 @@ header .container {
 .modal-label {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: inline-block;
+    display: block;
     margin-bottom: 4px;
+    line-height: 1.17;
 }
+
 .modal-wraper {
     position: relative;
 }
 .modal-input {
-    border: 1px solid #8e8f99;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     width: 360px;
     height: 40px;
@@ -555,7 +561,7 @@ header .container {
     border: 1px solid rgba(46, 47, 66, 0.4);
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
@@ -573,7 +579,7 @@ header .container {
 .input-check-text {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
@@ -584,16 +590,17 @@ header .container {
     width: 16px;
     height: 16px;
     border-radius: 2px;
-    border: 1px solid #8e8f99;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     display: inline-flex;
     justify-content: center;
     align-items: center;
     fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-check:checked + .input-check-text > .check-empty {
     background-color: #404BBF;
     border: none;
-    fill: #fff;
+    fill: #F4F4FD;;
 }
 .input-check:focus + .input-check-text > .check-empty {
     border-color: #404BBF;
@@ -615,7 +622,7 @@ header .container {
     padding: 16px 32px;
     min-width: 169px;
     height: 56px;
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
     margin-right: auto;
